add: adds counter function

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Counter</h1>
             <p>(click the white area or hit space / enter to count)</p>
         </section>
-        <button>Reset</button>
+        <button class="reset">Reset</button>
     </header>
     <main>
         <section class="progress"></section>
